@@ -1,0 +1,16 @@
+# Calcular M generalizado
+T =
+[[ 0.474 -0.479  0.738  0.199]
+ [ 0.259  0.878  0.403  0.348]
+ [-0.841  0.     0.54   0.276]
+ [ 0.     0.     0.     1.   ]]
+
+# Calcular M
+
+T =
+[[ 0.474 -0.479  0.738  0.125]
+ [ 0.259  0.878  0.403  0.068]
+ [-0.841  0.     0.54   0.098]
+ [ 0.     0.     0.     1.   ]]
+
+## Diferencia en (x, y, z)
